test/classes/nilability/demo5.good
demo5.chpl:14: error: applying postfix-! to nil
demo5.chpl:14: note: variable x is nil at this point
demo5.chpl:12: note: this statement may be relevant
